# acos

./: .gitignore  Cargo.toml  Makefile  README.md  config.go  cost.go  cost_test.go  go.mod  go.sum  organization.go  organization_test.go  organizations.go  sts.go
cmd/acos/: account.go  account_test.go  main.go  selector.go
src/: config.rs  cost.rs  main.rs  organization.rs  sts.rs
